<resources>
    <string name="app_name">Air Horn</string>
    <string name="general_header">General</string>
    <string name="vibrate_summery">When the sound is playing</string>
    <string name="page_title">Air Horn</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="greeting">Greeting:</string>
    <string name="company_name_copy_right"><![CDATA[Copyright © HBSoftware]]></string>
    <string name="attribution1">- App Idea based on \'Air Horn\' (Google play store).</string>
    <string name="attribution3">- Launch Icon resource from Flaticon(www.flaticon.com).</string>
    <string name="author">Author:</string>
    <string name="AuthorName">- Helal Uzzaman Hasib</string>
    <string name="privacy_policy"><a href = "https://gitlab.com/hbsoftwaremobile/privacy-policy/-/wikis/Air-Horn">Privacy Policy</a></string>
    <!-- TODO: Remove or change this placeholder text -->


</resources>